--- a/project1/Description
+++ b/project1/Description
@@ -1,1 +1,13 @@
+Task at Hand:
 
+-> UI/UX Internship at CodSoft.
+-> Tasks include: Task Flow Mapping, Mobile App Wireframe Creation, and Designing the Final Product.
+
+What I Did:
+
+-> Immersed in learning UI/UX.
+-> Utilized design tools like Figma and Adobe.
+-> Created wireframes and user flows.
+-> Translated client's vision into design.
+
+For more details, view the attached image files in the same location as this file.
