--- a/project2/Description
+++ b/project2/Description
@@ -1,1 +1,13 @@
+Task at Hand:
 
+-> UI/UX Design Internship at CodSoft.
+-> Project: Create an email newsletter template for 'Here for You,' an imaginary charitable organization.
+
+What I Did:
+
+-> Translated 'Here for You's' mission into an engaging email newsletter template.
+-> Explored color patterns and their emotional impact.
+-> Created wireframes to plan content placement.
+-> Implemented strategic color choices to enhance design and user experience.
+
+For a detailed look at the final work, please view the attached images in the same location as this file.
