--- a/project3/Description
+++ b/project3/Description
@@ -1,1 +1,13 @@
+Task at Hand:
 
+-> UI/UX Design Internship at CodSoft.
+-> Project: Design a visually captivating and user-friendly 'Restaurant Menu' interface to enhance the dining experience.
+
+What I Did:
+
+-> Created wireframes for menu layout and interactivity.
+-> Applied color psychology and imagery to reflect the restaurant's personality.
+-> Conducted user research and usability tests to align design with diner preferences.
+-> Developed the final menu design, showcasing color patterns and image usage expertise.
+
+For a detailed view of the final menu design, please refer to the attached images in the same location as this file.
